@@ -20,9 +20,9 @@
 # with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 
-bin_PROGRAMS = riscv32-gdbserver
+bin_PROGRAMS = riscv64-gdbserver
 
-riscv32_gdbserver_SOURCES = AbstractConnection.cpp \
+riscv64_gdbserver_SOURCES = AbstractConnection.cpp \
                             AbstractConnection.h   \
                             GdbServer.cpp          \
                             GdbServer.h            \
@@ -43,7 +43,7 @@ riscv32_gdbserver_SOURCES = AbstractConnection.cpp \
 # For now. Link in the common binaries (we only need these from one model) and
 # the actual models.
 
-riscv32_gdbserver_LDADD = ../targets/libtargets.la                   \
+riscv64_gdbserver_LDADD = ../targets/libtargets.la                   \
                           ../trace/libtrace.la                       \
                           @MDIR_RI5CY@/verilated.o                   \
                           @MDIR_RI5CY@/verilated_vcd_c.o             \
@@ -51,7 +51,7 @@ riscv32_gdbserver_LDADD = ../targets/libtargets.la                   \
                           @MDIR_PICORV32@/V@MODNAME_PICORV32@__ALL.a \
                           @MDIR_RI5CY@/V@MODNAME_RI5CY@__ALL.a
 
-riscv32_gdbserver_CPPFLAGS = -I$(top_srcdir)/targets          \
+riscv64_gdbserver_CPPFLAGS = -I$(top_srcdir)/targets          \
                              -I$(top_srcdir)/targets/common   \
                              -I$(top_srcdir)/targets/picorv32 \
                              -I$(top_srcdir)/targets/ri5cy    \
