@@ -1,3 +1,9 @@
+2017-08-29  Jeremy Bennett  <jeremy.bennett@embecosm.com>
+
+	* server/Makefile.am: Rename final target to riscv64-gdbserver.
+	* server/Makefile.in: Regenerated.
+	* server/main.cpp: Use riscv64-gdbserver in usage message.
+
 2017-08-29  Andrew Burgess  <andrew.burgess@embecosm.com>
 
 	* server/GdbServerImpl.cpp (GdbServerImpl::rspSyscallRequest):
